Fixed glitching animated GIF on tablet
When set as bkg-image, seemed to glitch a ton on scroll. Setting it as
an IMG inside the DOM seemed to reduce/eliminate glitching.

--- a/app/_scss/pages/beercamp/_beercamp-concept.scss
+++ b/app/_scss/pages/beercamp/_beercamp-concept.scss
@@ -2,10 +2,15 @@
 	.concept-laptop-air {
 		.screen {
 			background-color: black;
-			background-image: url('/img/pages/beercamp/space-invaders.gif'), url('/img/pages/beercamp/space-invaders-static.png');
-			background-position: center center, center center;
-			background-size: cover, cover;
-			background-repeat: no-repeat, no-repeat;
+			background-image: url('/img/pages/beercamp/space-invaders-static.png');
+			background-position: center center;
+			background-size: cover;
+			background-repeat: no-repeat;
+
+			img {
+				width: 100%;
+				height: 100%;
+			}
 		}
 	}
 }
